v3.8.8 (XXXX-XX-XX)
-------------------

* Web UI: Now correctly handles the server error response when an error occurred
  during the modification of a document or an edge (BTS-934).

* Make graph search case-insensitive (fixes BTS-882).

* Improve error handling for passing wrong transaction ids / cursor ids / pregel
  job ids to request forwarding. Also prevent the error "transaction id not
  found" in cases when request forwarding was tried to a coordinator that was
  recently restarted.

* BTS-907: Fixed some rare SortNode related optimizer issues, when at least two
  or more SortNodes appeared in the AQL execution plan.

* Fixed BTS-852 (user's saved queries used to disappear after updating user
  profile).

* BTS-913: check for proper timezone setup of the system on startup.
  This evades errors that else would only occur in AQL-Functions at runtime.

* Fixed BTS-851: "Could not fetch the applier state of: undefined".

* Since ArangoDB 3.8 there was a loophole for creating duplicate keys in the
  same collection. The requirements were:
  - cluster deployment
  - needs at least two collections (source and target), and the target
    collection must have more than one shard and must use a custom shard key.
  - inserting documents into the target collection must have happened via an AQL
    query like `FOR doc IN source INSERT doc INTO target`.
  In this particular combination, the document keys (`_key` attribute) from the
  source collection were used as-is for insertion into the target collection.
  However, as the target collection is not sharded by `_key` and uses a custom
  shard key, it is actually not allowed to specify user-defined values for
  `_key`. That check was missing since 3.8 in this particular combination and
  has now been added back. AQL queries attempting to insert documents into a
  collection like this will now fail with the error "must not specifiy _key for
  this collection", as they used to do before 3.8.
