@@ -1,6 +1,9 @@
 v3.8.8 (XXXX-XX-XX)
 -------------------
 
+* Add progress reporting to RocksDB WAL recovery, in case there are many WAL
+  files to recover.
+
 * Web UI: Now correctly handles the server error response when an error occurred
   during the modification of a document or an edge (BTS-934).
 
